# vk_pub

./: .gitignore  LICENSE  README.md  pyproject.toml
scrapping/: scrap.py
vk_pub/scrapping/: scrap.py
